<resources>
    <string name="permission_denied">Permission Denied</string>
    <string name="bluetooth_scan_permission_explanation">To scan for Bluetooth devices, you need to grant the required permissions.</string>
    <string name="bluetooth_connect_permission_explanation">This app needs Bluetooth Connect permission to pair and communicate with devices.</string>
    <string name="ok">OK</string>
    <string name="no_permissions">No permissions</string>
    <string name="add_new_device">Add New Device</string>
    <string name="devices">Devices</string>
    <string name="unknown_name_device">Unknown device name</string>
    <string name="delete">Delete</string>
    <string name="ble_manager">BLE Manager</string>
    <string name="key_devicename">deviceName</string>
    <string name="key_deviceaddress">deviceAddress</string>
    <string name="bonded">Bonded</string>
    <string name="not_bonded">Not Bonded</string>
    <string name="device_detail">Device Detail</string>
    <string name="device_settings">Device Settings</string>
    <string name="device_name">Device Name</string>
    <string name="descriptor_uuid_mask">Descriptor UUID Mask</string>
    <string name="default_descriptor_uuid_mask">####face########################</string>
    <string name="formatted_uuid_mask">Formatted UUID mask: %1$s</string>
    <string name="invalid_uuid_mask_format">Invalid UUID mask format</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="unable_to_open_link">Unable to open link</string>
    <string name="open_the_link_in_your_browser">Open the link in your browser:\n%1$s</string>
    <string name="doc_url">https://github.com/petrsatka/BLEManager</string>
    <string name="doc_url_anchored">https://github.com/petrsatka/BLEManager?tab=readme-ov-file#ble-manager</string>
    <string name="no_descriptor_found_message">Check the descriptor UUID mask in the device settings or refer to the documentation at\n%1$s</string>
    <string name="no_matching_descriptor_found">No matching descriptor found</string>
    <string name="copied_link">Copied Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="clear_gatt_cache">Clear GATT Cache</string>
    <string name="settings">Settings</string>
    <string name="developer_guide">Developer Guide</string>
    <string name="application_settings">Application Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="refresh_data">Refresh data</string>
    <string name="value_must_be_number_between_and">Value must be number between %1$s and %2$s</string>
    <string name="maximum_bytes_allowed">Maximum %1$s bytes allowed</string>
    <string name="unable_to_discover_services">Unable to discover services</string>
    <string name="about">About</string>
    <string name="extensions">Extensions</string>
    <string name="purchased">Purchased</string>
    <string name="pending">Pending</string>
    <string name="unknown_state">Unknown State</string>
    <string name="buy">Buy (%1$s)</string>
    <string name="billing_api_connection_error">Billing API Connection Error: %1$s</string>
    <string name="purchases_loading_error">Purchases Loading Error: %1$s</string>
    <string name="products_loading_error">Products Loading Error %1$s</string>
    <string name="go_to_extensions">Go to Extensions</string>
    <string name="for_writing_values_to_characteristics_you_can_purchase_an_extension">For writing values to characteristics, you can purchase an extension.</string>
    <string name="delete_device">Delete device %1$s</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="list_of_bluetooth_devices">List of Bluetooth devices</string>
    <string name="device_values">Device Values</string>
    <string name="empty_device_list_text"><![CDATA[\n    <h5>Your device list is empty</h5>\n    <br>\n    Before adding devices to the list, you need to add a simple descriptor to the characteristics you want to manage.\n    <br>\n    Please refer to the <a href=\'%1$s\'>developer documentation</a>.\n    <br>\n    <br>\n    It\'s really easy, multiplatform, and you don\'t need any additional libraries.\n    <br>\n    <br>\n    <a href=\'%2$s\'>%3$s</a>\n    <br>\n    <br>\n    Thank you for using our app!\n]]></string>
    <string name="license_text"><![CDATA[MIT License<br>Copyright (c) 2025 petrsatka<br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.]]></string>
    <string name="negotiate_maximum_mtu_517b">Negotiate maximum MTU (max 517B)</string>
    <string name="mtu_comment">Some devices do not support MTU size negotiation. Some devices may have issues with connection or reconnection if a non-default MTU size is set. Be cautious.</string>
    <string name="pending_status">Pending...</string>
    <string name="device_is_not_connected">Device Is Not Connected</string>
    <string name="not_responding">Device is not responding. The app will continue trying to connect until the device responds.</string>
    <string name="mtu_size_negotiation_failed">MTU size negotiation failed</string>
    <string name="service_discovery_failed">Service discovery failed</string>
    <string name="reconnect">Reconnect</string>
    <string name="try_reconnect">You can try reconnecting to see if it resolves the issue.</string>
    <string name="not_responding_too_long">If you can\'t connect, try turning Bluetooth off and then back on.</string>
    <string name="extension_list">Extension List</string>
    <string name="connection_failed_help"><![CDATA[<h5>The device is not responding</h5>It seems that connecting to the device is taking too long. Please keep in mind that your device must meet Bluetooth Low Energy specifications and implement descriptors according to <a href=\'%1$s\'>the developer documentation</a>. Check if your device is in range and ready to connect. If the connection fails, you can try restarting the target device and turning Bluetooth off and then back on in your Android device.]]></string>
    <string name="donate_link">https://www.paypal.com/donate/?hosted_button_id=HLW7NERMQ6DCN</string>
    <string name="update_json_url">https://raw.githubusercontent.com/petrsatka/BLEManager/main/update.json</string>
    <string name="update_available">Update Available</string>
    <string name="update_dialog_content">A new version is available. Do you want to update?</string>
    <string name="update">Update</string>
</resources>