<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/donate"
        android:title="@string/extensions"
        android:contentDescription="@string/extensions"
        android:icon="@drawable/outline_volunteer_activism_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/outline_delete_24"
        android:contentDescription="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/developer_guide"
        android:title="@string/developer_guide"
        android:contentDescription="@string/developer_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:contentDescription="@string/about"
        app:showAsAction="never" />
</menu>