<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.DeviceSettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:navigationContentDescription="@string/navigate_back"
            android:contentDescription="@string/device_settings"
            app:title="@string/device_settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- UUID Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/uuid_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptor_uuid_mask"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_descriptor_uuid_mask_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/requestMtuSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negotiate_maximum_mtu_517b"
        android:layout_marginTop="16dp"
        app:useMaterialThemeColors="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mtu_comment"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>