<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DeviceDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/device_detail"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/device_detail_activity_menu"
            app:navigationContentDescription="@string/navigate_back"
            app:navigationIcon="@drawable/outline_arrow_back_24"
            app:title="@string/device_detail" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:visibility="invisible"
            app:tabMode="scrollable" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/device_values" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/connectionProblemsHelpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:focusable="true"
            android:clickable="true"
            android:linksClickable="true"
            android:focusableInTouchMode="true"
            android:padding="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:clickable="true"
            android:contentDescription="@string/device_is_not_connected"
            android:focusable="true"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>