<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeviceListActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/device_list_activity_menu"
            app:title="@string/devices" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBluetoothDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:contentDescription="@string/list_of_bluetooth_devices"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emptyDeviceListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:focusable="true"
        android:clickable="true"
        android:linksClickable="true"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add_new_device_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/add_new_device"
        app:srcCompat="@drawable/outline_add_24"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>